--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,34 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    
-    <title> About </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"
+    />
+    <link rel="stylesheet" href="/styles/layout.css" />
+    <link rel="stylesheet" href="/styles/content.css" />
+
+    <title>About</title>
+  </head>
+  <body>
     <div class="background_img">
-        <div class="header">
-            <!-- <img src="css/images/Cab-Sharing.svg" class="logo"> -->
-            <a href = "/"><img src="css/images/Cab-Sharing.svg" class="logo"></a>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/feedback">Feedback</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-            </nav>
-            <a href="/login"><button class="btn" id="btn1">Log In</button></a>
-            <a href="/register"><button class="btn" id="btn2">Sign Up</button></a>
-        </div>
-        <div class="details">
-            This is my portfolio project using Node and mongodb
-            <ul>
-            </ul>
-        </div>
-   </div>
-</body>
+      <div class="header">
+        <!-- <img src="css/images/Cab-Sharing.svg" class="logo"> -->
+        <a href="/"><img src="css/images/Cab-Sharing.svg" class="logo" /></a>
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/feedback">Feedback</a></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </nav>
+        <a href="/login"><button class="btn" id="btn1">Log In</button></a>
+        <a href="/register"><button class="btn" id="btn2">Sign Up</button></a>
+      </div>
+      <div class="details">
+        This is my portfolio project using Node and mongodb
+        <ul></ul>
+      </div>
+    </div>
+    <footer>
+      <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <!-- <div class="wave" id="wave4"></div> -->
+      </div>
+      <ul class="social_icon">
+        <!-- <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li> -->
+        <!-- <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li> -->
+        <li>
+          <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+        </li>
+        <li>
+          <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+        </li>
+      </ul>
+
+      <ul class="menu">
+        
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/feedback">Feedback</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+      <p class="copyright">CabBuddy by Anil Piparaiya.</p>
+    </footer>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
